k8s/gateway/collector-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: collector
  namespace: iot-security
  labels:
    app: collector
spec:
  clusterIP: None
  ports:
    - port: 9090
      targetPort: 9090
      protocol: TCP
      name: metrics
  selector:
    app: collector
