k8s/gateway/dashboard-ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: dashboard
  namespace: iot-security
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`iot-dashboard.homelab.kacperjarocki.dev`)
      kind: Rule
      services:
        - kind: Service
          name: dashboard
          port: 80
  tls:
    secretName: dashboard-tls
